--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					</div>
 
 								<!-- Footer Wrapper -->
-				<!-- <div id="footer-wrapper">
+				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
 							<div class="col-3 col-6-medium col-12-small">
@@ -101,7 +101,7 @@
 							</div>
 						</div>
 					</footer>
-				</div> -->
+				</div>
 		</div>
 
 		<!-- Scripts -->
