--- a/Contact.html
+++ b/Contact.html
@@ -72,14 +72,14 @@
 				</div>
 
 			<!-- Footer Wrapper -->
-				<!-- <div id="footer-wrapper">
+				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
 
 
 						</div>
 					</footer>
-				</div> -->
+				</div>
 
 		</div>
 
