--- a/Publications.html
+++ b/Publications.html
@@ -76,14 +76,16 @@
 
 			<!-- Footer Wrapper -->
 				<div id="footer-wrapper">
-					<footer id="footer"> <!-- class="container"> -->
-						<div> <!--  class="row"> -->
+					<footer id="footer" class="container">
+						<div class="row">
+							<div class="col-3 col-6-medium col-12-small">
 
 
+
+							</div>
 						</div>
 					</footer>
 				</div>
-
 		</div>
 
 		<!-- Scripts -->
