--- a/Research.html
+++ b/Research.html
@@ -70,7 +70,7 @@
 
 									   <div class="section clearfix">
 										    <h3>The Imageomics Institute</h3>
-										    <img style="height:350px;width:auto; float:left;  margin: 15px 15px 15px 0;" src="images/imageomics.jpg" alt="" />
+										    <img style="height:350px;width:auto; float:left;  margin: 15px 15px 0 0;" src="images/imageomics.jpg" alt="" />
 
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -91,7 +91,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Automated Character Construction with Deep Learning</h3>
-										    <img style="height:220px;width:auto; float:left;  margin: 15px 15px 15px 0;" src="images/phylonn.png" alt="" />
+										    <img style="height:220px;width:auto; float:left;  margin: 15px 15px 0 0;" src="images/phylonn.png" alt="" />
 
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -112,7 +112,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Simulating Raw Data</h3>
-										    <img style="height:250px;width:auto; float:left;  margin: 15px 15px 15px 0;" src="images/suzanne.jpg" alt="" />
+										    <img style="height:250px;width:auto; float:left;  margin: 15px 15px 0 0;" src="images/suzanne.jpg" alt="" />
 
 								            <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
@@ -133,7 +133,7 @@
 
 									   <div class="section clearfix">
 										    <h3>Ontologies for Automated Reasoning</h3>
-										    <img style="height:280px;width:auto; float:left;  margin: 15px 15px 15px 0;" src="images/phenoscape.png" alt="" />
+										    <img style="height:280px;width:auto; float:left;  margin: 15px 15px 0 0;" src="images/phenoscape.png" alt="" />
 
 									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
 									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
