--- a/Research.html
+++ b/Research.html
@@ -65,7 +65,13 @@
 									<article>
 									    <header style="margin-bottom:20px;"> <!-- class="major"> -->
 									        <h2>How Do We Handle Phenotypic Complexity?</h2>
-									        <!-- <p>Sidebars are not welcome here</p> -->
+									    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+									    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+									    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+									    consequat etiam lorem ipsum dolor sit amet nullam. Phasellus quam turpis,
+									    feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis
+									    eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus et
+									    mattis lectus sit amet pulvinar. Nam turpis nisi consequat etiam.</p>
 									   </header>
 
 									   <div class="section clearfix">
