--- a/Research.html
+++ b/Research.html
@@ -13,7 +13,7 @@
 				background: transparent !important; /* Makes the footer background transparent */
 			}
 			.section {
-				padding-top: 10px;
+				padding-top: 0;
 			}
 			.clearfix::after {
 				content: "";
