--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 				display: table;
 				clear: both;
 			}
+			body {
+        			background: url('images/background-main.jpg') no-repeat center center fixed;
+        			background-size: cover; /* This will make sure the background image covers the entire viewport */
+    			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
