--- a/Contact.html
+++ b/Contact.html
@@ -7,8 +7,27 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<style>
 			#header-wrapper {
-				background: transparent !important;
+				background: transparent !important; /* Ensures the background is transparent, overriding other styles if necessary */
 			}
+			#footer-wrapper {
+				background: transparent !important; /* Makes the footer background transparent */
+			}
+			.section {
+				padding-top: 20px;
+			}
+			.clearfix::after {
+				content: "";
+				display: table;
+				clear: both;
+			}
+			body {
+        			background: url('images/background-main.jpg') no-repeat center center fixed;
+        			background-size: cover; /* This will make sure the background image covers the entire viewport */
+    			}
+    			#banner h2 {
+        			opacity: 1 !important; /* Ensures the text is completely opaque */
+       				background: none; /* Removes any background that might affect visibility */
+    			}
 			#content p {
 				text-align: center;
 			}
