--- a/Software.html
+++ b/Software.html
@@ -20,6 +20,14 @@
 				display: table;
 				clear: both;
 			}
+			body {
+        			background: url('images/background-main.jpg') no-repeat center center fixed;
+        			background-size: cover; /* This will make sure the background image covers the entire viewport */
+    			}
+    			#banner h2 {
+        			opacity: 1 !important; /* Ensures the text is completely opaque */
+       				background: none; /* Removes any background that might affect visibility */
+    			}
 		</style>
 	</head>
 	<body class="homepage is-preload">
