--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
 
 									</article>
 
+									                    <!-- New Article for Contact -->
+                						        <article style="text-align:center;"> <!-- Centering the content horizontally -->
+                        							<header class="major">
+                            								<h2>Contact</h2>
+                        							</header>
+                        							<p>If you have any questions or would like to get in touch, 
+										   please feel free to contact me at <a href="mailto:email@example.com">email@example.com</a>.
+										</p>
+                    							</article>
+
 								</div>
 							</div>
 						</div>
