--- a/index.html
+++ b/index.html
@@ -109,9 +109,13 @@
                         							<header>
                             								<h3>Contact Me!</h3>
                         							</header>
-                        							<p>If you have any questions or would like to get in touch, 
-										   please feel free to contact me at <a href="mailto:email@example.com">email@example.com</a>.
-										</p>
+											<p>
+										        Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=calebc22@vt.edu" target="_blank">calebc22@vt.edu</a> &emsp;
+										        Twitter: <a href="https://twitter.com/CalebCharp" target="_blank">@CalebCharp</a> &emsp;
+											<a href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en" target="_blank">Google Scholar</a> &emsp;
+											<a href="https://github.com/calcharp" target="_blank">GitHub</a><br>		
+										        <!-- ResearchGate<br> -->
+											</p>
                     							</article>
 
 								</div>
