--- a/index.html
+++ b/index.html
@@ -119,8 +119,9 @@
 										        <a style="text-decoration:none" href="https://twitter.com/CalebCharp" target="_blank">Twitter</a> &emsp;&emsp;
 											<a style="text-decoration:none" href="https://scholar.google.com/citations?user=LyaJ880AAAAJ&hl=en" target="_blank">Google Scholar</a> &emsp;&emsp;
 											<a style="text-decoration:none" href="https://github.com/calcharp" target="_blank">GitHub</a><br>		
-											<a style="text-decoration:none" href="https://www.etsy.com/shop/geeksanonymousco" target="_blank">Etsy</a>
-											<a style="text-decoration:none" href="www.wyzant.com/Tutors/CalebTheTutor" target="_blank">Wyzant</a><br>												
+											<a style="text-decoration:none" href="https://www.etsy.com/shop/geeksanonymousco" target="_blank">Etsy</a> &emsp;&emsp;
+											<a style="text-decoration:none" href="www.wyzant.com/Tutors/CalebTheTutor" target="_blank">Wyzant</a> &emsp;&emsp;												
+											<a style="text-decoration:none" href="https://medium.com/@calebcharpentier93" target="_blank">Medium</a><br>												
 												<!-- ResearchGate<br> -->
 											</p>
                     							</article>
