--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         			text-align: center !important; /* Centering the content horizontally */
     			}
     			.inner nav#nav ul {
-    			    	margin-left: auto;
-			    	margin-right: auto;
-   			        width: fit-content; /* Adjusts the width to fit the content */
+    			    	margin-left: auto !important;
+			    	margin-right: auto !important;
+   			        width: fit-content !important; /* Adjusts the width to fit the content */
  			}
 		</style>
 	</head>
